--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+########## global configs of match2 ##########
+com.nxquant.example.global.pollTimeout=10000
+com.nxquant.example.global.inputTopic=MATCH
 
+#web
+server.port=9900
+server.servlet.context-path=/
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+server.tomcat.uri-encoding=UTF-8
+spring.resources.add-mappings=true
