--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,16 @@
 com.nxquant.example.global.pollTimeout=10000
 com.nxquant.example.global.inputTopic=MATCH
 
+spring.application.name=TEST
+####################################################################
+management.endpoints.web.base-path=/monitor
+management.metrics.tags.application=${spring.application.name}
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env,beans
+
 #web
-server.port=9900
+server.port=9703
 server.servlet.context-path=/
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
