--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,19 @@ spring.resources.add-mappings=true
 com.nxquant.microservice.consul.host=192.168.100.113
 com.nxquant.microservice.consul.port=8500
 com.nxquant.microservice.consul.healthInterval=15s
+
+spring.datasource.url=jdbc:mysql://192.168.100.163:3306/wallet?characterEncoding=utf8&useSSL=false
+spring.datasource.username=wallet
+spring.datasource.password=wallet
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
+
+
+com.nxquant.wallet.btc.user=name
+com.nxquant.wallet.btc.pwd=pwd
+com.nxquant.wallet.btc.rpcAddress=http://127.0.0.1:18883
+
+
