--- a/trade-match/pom.xml
+++ b/trade-match/pom.xml
@@ -15,6 +15,11 @@
     <description>tradematch</description>
 	
     <dependencies>
+	    <dependency>
+            <groupId>com.nxquant.exchange</groupId>
+            <artifactId>trade-base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -51,6 +56,16 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>0.42</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
