--- a/trade-match/src/main/resources/application.properties
+++ b/trade-match/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+
+#kafka.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+#kafka.value.serializer=com.js.trade.kafka.kryo.KryoSerializer
+#kafka.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#kafka.value.deserializer=com.js.trade.kafka.kryo.KryoDeserializer
+
 ########## global configs of match ##########
 com.nxquant.exchange.match.global.pollTimeout=10000
 com.nxquant.exchange.match.global.inputTopic=MATCH
@@ -14,9 +20,9 @@ com.nxquant.exchange.match.input.consumer.group.id=input.consumer
 com.nxquant.exchange.match.input.consumer.auto.offset.reset=earliest
 com.nxquant.exchange.match.input.consumer.isolation.level=read_committed
 com.nxquant.exchange.match.input.consumer.enable.auto.commit=false
-com.nxquant.exchange.match.input.consumer.bootstrap.servers=@kafka.broker.bootstrap.servers@
-com.nxquant.exchange.match.input.consumer.key.deserializer=@kafka.key.deserializer@
-com.nxquant.exchange.match.input.consumer.value.deserializer=@kafka.value.deserializer@
+com.nxquant.exchange.match.input.consumer.bootstrap.servers=127.0.0.1:9091
+com.nxquant.exchange.match.input.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+com.nxquant.exchange.match.input.consumer.value.deserializer=com.nxquant.exchange.base.core.kryo.KryoDeserializer
 
 
 ########## snap of consumer ##########
@@ -28,9 +34,9 @@ com.nxquant.exchange.match.snap.consumer.group.id=snap.consumer
 com.nxquant.exchange.match.snap.consumer.auto.offset.reset=none
 com.nxquant.exchange.match.snap.consumer.isolation.level=read_committed
 com.nxquant.exchange.match.snap.consumer.enable.auto.commit=false
-com.nxquant.exchange.match.snap.consumer.bootstrap.servers=@kafka.broker.bootstrap.servers@
-com.nxquant.exchange.match.snap.consumer.key.deserializer=@kafka.key.deserializer@
-com.nxquant.exchange.match.snap.consumer.value.deserializer=@kafka.value.deserializer@
+com.nxquant.exchange.match.snap.consumer.bootstrap.servers=127.0.0.1:9091
+com.nxquant.exchange.match.snap.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+com.nxquant.exchange.match.snap.consumer.value.deserializer=com.nxquant.exchange.base.core.kryo.KryoDeserializer
 
 
 ########## inc of consumer ##########
@@ -42,9 +48,9 @@ com.nxquant.exchange.match.inc.consumer.group.id=inc.consumer
 com.nxquant.exchange.match.inc.consumer.auto.offset.reset=none
 com.nxquant.exchange.match.inc.consumer.isolation.level=read_committed
 com.nxquant.exchange.match.inc.consumer.enable.auto.commit=false
-com.nxquant.exchange.match.inc.consumer.bootstrap.servers=@kafka.broker.bootstrap.servers@
-com.nxquant.exchange.match.inc.consumer.key.deserializer=@kafka.key.deserializer@
-com.nxquant.exchange.match.inc.consumer.value.deserializer=@kafka.value.deserializer@
+com.nxquant.exchange.match.inc.consumer.bootstrap.servers=127.0.0.1:9091
+com.nxquant.exchange.match.inc.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+com.nxquant.exchange.match.inc.consumer.value.deserializer=com.nxquant.exchange.base.core.kryo.KryoDeserializer
 
 
 #web
